# jwty-mcjwt-face

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  gunicorn.conf.py  private.key  public.key  pyproject.toml
jwty_mcjwt_face/: app.py
scripts/: a-jwt  update-dev-deps
tests/: test_app.py  test_jwt.txt
